feat: win count of mining.
